tests/errmsgs/t18327.nim
discard """
  errormsg: "parameter 'n' requires a type"
"""

proc fn3(n) = discard